fix: tags and category

--- a/themes/huishou/layouts/_default/baseof.html
+++ b/themes/huishou/layouts/_default/baseof.html
@@ -266,6 +266,9 @@
 	<script src="https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/js/area.js"></script>
 	{{ block "footscript" . }}{{ end }}
   	<script src="https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/js/common.js"></script>
+	<!-- wooooden.com Cloudflare Web Analytics -->
+	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4a6ed7a92e5848bfacd805afc2f2abc8"}'></script>
+	<!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
