--- a/themes/huishou/layouts/_default/single.html
+++ b/themes/huishou/layouts/_default/single.html
@@ -3,12 +3,17 @@
 <meta name="keywords" content="{{- if .Keywords -}}{{ delimit .Keywords ", " }}{{ else }}{{ delimit .Params.tags ", " }}{{ end -}}" />
 <meta name="description" content="{{ .Summary | plainify}}" />
 {{ $content := .Content }}
-{{ $matches := findRE `src="(https?://[^\"]+)"` $content -1 }}
+{{ $matches := findRE `src="([^"]+)"` $content -1 }}
 {{ $imageUrl := "https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/images/logo.png" }}
 {{ if $matches }}
     {{ $firstMatch := index $matches 0 }}
-    {{ $imageUrl = replaceRE `^src="` "" $firstMatch }}
-    {{ $imageUrl = replaceRE `"$` "" $imageUrl }}
+    {{ $extractedUrl := replaceRE `src="([^"]+)"` "${1}" $firstMatch }}
+    {{ if not (or (hasPrefix $extractedUrl "http://") (hasPrefix $extractedUrl "https://")) }}
+        {{ $baseUrl := .Site.BaseURL }}
+        {{ $imageUrl = printf "%s%s" $baseUrl $extractedUrl }}
+    {{ else }}
+        {{ $imageUrl = $extractedUrl }}
+    {{ end }}
 {{ end }}
 <meta property="og:locale" content="zh_CN" />
 <meta property="og:type" content="article" />
@@ -151,7 +156,7 @@
                 },
                 "sameAs": [
                     "https://www.wooooden.com/",
-                    "https://www.issem.cn/",
+                    "https://www.issem.cn/"
                 ],
                 "numberOfEmployees": 999,
                 "founder": {
@@ -268,12 +273,17 @@
                         {{ with (where .Site.RegularPages "Params.hidden" "!=" true).Related $opts | first 5 }}
                         {{ range . }}
                             {{ $content := .Content }}
-                            {{ $matches := findRE `src="(https?://[^\"]+)"` $content -1 }}
+                            {{ $matches := findRE `src="([^"]+)"` $content -1 }}
                             {{ $imageUrl := "https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/images/logo.png" }}
                             {{ if $matches }}
                                 {{ $firstMatch := index $matches 0 }}
-                                {{ $imageUrl = replaceRE `^src="` "" $firstMatch }}
-                                {{ $imageUrl = replaceRE `"$` "" $imageUrl }}
+                                {{ $extractedUrl := replaceRE `src="([^"]+)"` "${1}" $firstMatch }}
+                                {{ if not (or (hasPrefix $extractedUrl "http://") (hasPrefix $extractedUrl "https://")) }}
+                                    {{ $baseUrl := .Site.BaseURL }}
+                                    {{ $imageUrl = printf "%s%s" $baseUrl $extractedUrl }}
+                                {{ else }}
+                                    {{ $imageUrl = $extractedUrl }}
+                                {{ end }}
                             {{ end }}
                             <a href="{{ .Permalink }}" target="_blank" title="{{ .Title }}">
                                 <dl>
