--- a/themes/huishou/layouts/_default/home.html
+++ b/themes/huishou/layouts/_default/home.html
@@ -3,19 +3,19 @@
 <meta name="360-site-verification" content="1bf1a0ea1648ec4eea769e31804d7727" />
 <meta name="shenma-site-verification" content="2e76cda2ba5e2e78f82e86bb52ac1fd0_1669164983">
 <meta name="bytedance-verification-code" content="49AiWiMu0fOxWjs/mWJD" />
-<title>企业办公家具采购-二手办公家具出售-二手办公桌椅租赁回收</title>
-<meta name="keywords" content="二手办公家具,二手办公家具出售,二手办公家具租赁,装配狮企业采购平台-二手办公家具出售-二手办公家具租赁回收二手办公家具回收,二手办公桌椅,二手办公桌,二手办公椅,二手工位,二手文件柜,二手班台,二手沙发茶几" />
-<meta name="description" content="装配狮主营二手办公家具销售租赁回收及仓储寄存业务，涵盖了二手办公桌,二手办公椅,二手工位,二手班台,二手文件柜,二手沙发茶几等多种二手家具。" />
+<title>{{ .Site.Params.title }}</title>
+<meta name="keywords" content="{{ .Site.Params.keywords }}" />
+<meta name="description" content="{{ .Site.Params.description }}" />
 <meta property="og:locale" content="zh_CN" />
 <meta property="og:type" content="website">
-<meta property="og:title" content="企业办公家具采购平台-二手办公家具出售-二手办公桌椅租赁回收">
+<meta property="og:title" content="{{ .Site.Params.title }}">
 <meta property="og:image" content="https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/images/logo.png">
 <meta property="og:url" content="{{ .Site.BaseURL }}">
-<meta property="og:description" content="装配狮主营二手办公家具销售租赁回收及仓储寄存业务，涵盖了二手办公桌,二手办公椅,二手工位,二手班台,二手文件柜,二手沙发茶几等多种二手家具。">
+<meta property="og:description" content="{{ .Site.Params.description }}">
 <meta property="og:site_name" content="{{ .Site.Title }}">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="企业办公家具采购平台-二手办公家具出售-二手办公桌椅租赁回收">
-<meta name="twitter:description" content="装配狮主营二手办公家具销售租赁回收及仓储寄存业务，涵盖了二手办公桌,二手办公椅,二手工位,二手班台,二手文件柜,二手沙发茶几等多种二手家具。">
+<meta name="twitter:title" content="{{ .Site.Params.title }}">
+<meta name="twitter:description" content="{{ .Site.Params.description }}">
 <meta name="twitter:image" content="https://cdn.jsdelivr.net/gh/lopinv/wooooden.com/static/assets/images/logo.png">
 <link rel="canonical" href="{{ .Site.BaseURL }}">
 {{ end }}
